Bug 471327 - "Shut it down and change the battery" text outdated
Summary: "Shut it down and change the battery" text outdated
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.27.5
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2023-06-22 10:14 UTC by John Veness
Modified: 2023-09-02 16:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2023-06-22 10:14:44 UTC
SUMMARY
The text "Battery running low - to continue using your computer, plug it in or shut it down and change the battery" seems rather outdated. Pretty much no new laptop in the last few years has a user-changeable battery, making the message seem jarring to modern audiences.

STEPS TO REPRODUCE
1. Wait until the battery is 10% or lower
2. View the notification 

OBSERVED RESULT
Notification text is "Battery running low - to continue using your computer, plug it in or shut it down and change the battery."

EXPECTED RESULT
Notification text something like "Battery running low - to continue using your computer, plug it in."

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230620
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.10
Kernel Version: 6.3.7-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620
Manufacturer: HP
Product Name: HP ProBook 450 G4

ADDITIONAL INFORMATION
In an ideal world, it would be nice if there was some way of detecting whether a device has a user-changeable battery, but in the absence of that, I think the above suggestion is a better default. I'm sure the wording can be improved further. Thanks!
Comment 1 Bug Janitor Service 2023-09-01 17:04:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/231
Comment 2 Nate Graham 2023-09-02 16:25:04 UTC
Git commit f211d3952f771d38a44a2370c5fa174c4929dc94 by Nate Graham.
Committed on 02/09/2023 at 18:23.
Pushed by ngraham into branch 'master'.

Shorten Low and Critical battery notification text

We don't need to be so verbose to get the point across, and we also
don't need to repeat the title in the body. Let's shorten these messages
to make sure people actually read them.
FIXED-IN: 6.0

M  +6    -7    daemon/powerdevilcore.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/f211d3952f771d38a44a2370c5fa174c4929dc94