Shorten Low and Critical battery notification text

We don't need to be so verbose to get the point across, and we also
don't need to repeat the title in the body. Let's shorten these messages
to make sure people actually read them.

BUG: 471327
FIXED-IN: 6.0